--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ before_script:
 #    - mkdir opencv_lib
 #    - cp opencv/build/lib/libopencv_java320.so opencv_lib/libopencv_java320.so
 #    - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/opencv_lib/
+# cambiar el directorio con mkdir opencv_lib
     - chmod +x gradlew
 
 script:
